New File Browser opens off-center on hiDPI displays #69463

Closed
opened 2019-09-03 23:41:50 +02:00 by William Reynish · 3 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26

Blender Version
Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-03 21:15, hash: 197653e087
Worked: N/A

Short description of error
The new File Browser opens in the center, but this fails with hiDPI displays

Exact steps for others to reproduce the error

  • Open Blender on a hiDPI display
  • Open the File Browser. It will spawn in the bottom left of the window.
**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26 **Blender Version** Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-03 21:15, hash: `197653e087` Worked: N/A **Short description of error** The new File Browser opens in the center, but this fails with hiDPI displays **Exact steps for others to reproduce the error** - Open Blender on a hiDPI display - Open the File Browser. It will spawn in the bottom left of the window.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Julian Eisel was assigned by William Reynish 2019-09-03 23:42:07 +02:00

This issue was referenced by da25aca267

This issue was referenced by da25aca2677ec2b566cad1809eebceee22b28b53
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69463
No description provided.