Fix T69463: File Browser opens off-center on hiDPI

wmWindow.sizex/y doesn't have system's pixel size applied.